--- a/style.css/portfolio.css
+++ b/style.css/portfolio.css
@@ -40,13 +40,26 @@ nav a{
 }
 /* header related styles */
 .header {
-    background: color #fff8f3; ;
+    background: color #fff8f3;
+    ;
 }
 .banner{
-padding:  30px 30px 30px 150px;
+padding:  30px 30px 0px 150px;
 display: flex;
 align-items: center;
 }
 .banner .profile-pic{
-    width: 500px;
+    width: 800px;
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
