--- a/style.css/portfolio.css
+++ b/style.css/portfolio.css
@@ -14,6 +14,17 @@ body{
     font-weight: 700;
     padding: 15px 35px;
 }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
 /* nav related styles */
 nav {
     display: flex;
@@ -47,6 +58,12 @@ nav a{
 padding:  30px 30px 0px 150px;
 display: flex;
 align-items: center;
+justify-content: space-between;
+background-color: rgb(245, 192, 175);
+}
+.banner-content{
+    max-width: 500px;
+    
 }
 .banner .profile-pic{
     width: 800px;
@@ -62,4 +79,17 @@ align-items: center;
     font-weight: 700;
     margin-top: 5px;
     margin-bottom: 20px;
+}
+.banner-discription{
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+/* main section styles */
+
+/* about section styles */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background-color: rgb(245, 192, 175);
+    margin: 130px 0;
 }
